After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 763354 - vaapipluginutil: Fix display and window memory leak
vaapipluginutil: Fix display and window memory leak
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer-vaapi
git master
Other Linux
: Normal normal
: git master
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-03-09 02:07 UTC by Vineeth
Modified: 2016-03-09 17:18 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix display memory leak (1.33 KB, patch)
2016-03-09 02:08 UTC, Vineeth
none Details | Review
fix display and window memory leak (1.48 KB, patch)
2016-03-09 02:57 UTC, Vineeth
committed Details | Review

Description Vineeth 2016-03-09 02:07:50 UTC
Fix GLDisplay and VaapiDisplay leaks
Comment 1 Vineeth 2016-03-09 02:08:30 UTC
Created attachment 323461 [details] [review]
fix display memory leak
Comment 2 Vineeth 2016-03-09 02:57:28 UTC
Created attachment 323464 [details] [review]
fix display and window memory leak

fix GlWindow memory leak as well.
Comment 3 Víctor Manuel Jáquez Leal 2016-03-09 17:18:37 UTC
Pushed with modifications.